--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my first socket.io app",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "ejs": "^2.5.6",
     "mangodb": "^1.0.0",
     "mongod": "^2.0.0",
     "socket.io": "^1.7.3"
